--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,4 @@
 [deps]
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
+Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
