--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,6 @@
 [deps]
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
