--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,10 @@
 [deps]
+Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Folds = "41a02a25-b8f0-4f67-bc48-60067656b558"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
